# telegram-mcp

./: .env.example  .gitignore  .mcpbignore  Dockerfile  LICENSE  PRIVACY.md  README.md  README.uz.md  autoresponder.py  kb.py  knowledge.example.json  login.py  manifest.json  pyproject.toml  requirements.txt  server.json  server.py  smithery.yaml
.github/workflows/: ci.yml
tests/: test_tools.py
