[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-mcp-mtproto"
version = "1.0.0"
description = "MCP server to control your personal Telegram account (MTProto/Telethon) from Claude and other MCP clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Muhammadyunusxon" }]
keywords = ["mcp", "telegram", "telethon", "mtproto", "claude", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "telethon>=1.36.0",
  "mcp>=1.2.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Muhammadyunusxon/telegram-mcp"
Repository = "https://github.com/Muhammadyunusxon/telegram-mcp"
Issues = "https://github.com/Muhammadyunusxon/telegram-mcp/issues"

[project.scripts]
telegram-mcp = "server:main"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "login.py", "kb.py"]
sources = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
